--- a/src/components/Header/Header.styles.css
+++ b/src/components/Header/Header.styles.css
@@ -1,4 +1,15 @@
+.header-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 /***************MENU TOGGLE****************/
+.header-icon {
+  height: 50px !important;
+  width: 50px;
+}
+
 .header-icon span {
   cursor: pointer;
 }
@@ -7,6 +18,8 @@
 .search-bar {
   align-items: center;
   display: flex;
+  min-width: 200px;
+  width: 50%;
 }
 
 .search-bar input,
@@ -22,17 +35,15 @@
   width: 100%;
 }
 
-.search-bar button {
-  background-color: #191a5e;
-  border-radius: 0 4px 4px 0;
-  cursor: pointer;
+.search-bar input:focus {
+  outline: none !important;
 }
 
-/***************PROFILE MENU****************/
-.input-icon {
-  background-color: #c2c3ff;
-  border-radius: 50%;
+.search-bar button {
+  display: flex;
+  align-items: center;
+  background-color: #191a5e;
+  border-radius: 0 4px 4px 0;
+  color: white;
   cursor: pointer;
-  height: 2em;
-  width: 2em;
 }
